# atlas

./: .gitignore  CHANGELOG.md  README.md  TODO  TODO.md  pyproject.toml
.github/workflows/: ci.yml
src/atlas/: __init__.py  cards.py  cli.py  context.py  git.py  github.py  tree.py
tests/: test_main.py
