[project]
name = "atlas"
dynamic = ["version"]
description = "One thing, done well."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Kit Ledru", email = "info@1i.is"}]
keywords = ['repository', 'codebase', 'exploration', 'mapping', 'understanding']
dependencies = [
    "fastgit",
    "ghapi",
]

[tool.hatch.version]
path = "src/atlas/__init__.py"

[project.scripts]
atlas = "atlas:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "fastship",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.fastship]
branch = "main"
